@@ -53,6 +53,9 @@ debhelper (11.1) UNRELEASED; urgency=medium
   * dh_gencontrol: Deduplicate debug-ids before inserting them into
     the control file.  Thanks to Mattia Rizzolo for reporting the
     bug.  (Closes: #886038)
+  * dh: Rewrite sequence handling to ensure that dh does not "inline"
+    a subtarget of a target it recurses into.  Thanks to James
+    Cowgill for reporting the bug.  (Closes: #880840)
 
  -- Niels Thykier <niels@thykier.net>  Sun, 17 Dec 2017 07:59:18 +0000
 
